// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Js Plugin Execution - augmentResourceHash 1`] = `
[
  "FARM_RUNTIME_runtime",
  "index.d4c2c502.js",
]
`;

exports[`Js Plugin Execution - augmentResourceHash 2`] = `
{
  "custom": {},
  "data": {
    "dynamicImports": [],
    "exports": [],
    "importedBindings": {},
    "imports": [],
    "isDynamicEntry": false,
    "isEntry": true,
    "isImplicitEntry": false,
  },
  "id": "index_eab4",
  "map": null,
  "moduleIds": [
    "index.ts?foo=bar",
  ],
  "modules": {
    "index.ts?foo=bar": {
      "id": "index.ts?foo=bar",
      "originalLength": 51,
      "renderedContent": "function e(e,r,u,n){e._m(r),r.default="render-resource-pot-return-value";}",
      "renderedLength": 74,
      "renderedMap": null,
    },
  },
  "name": "index",
  "resourcePotType": "js",
}
`;

exports[`Js Plugin Execution - augmentResourceHash 3`] = `
[
  "FARM_RUNTIME_runtime",
  "index.cbe2c1dd.js",
]
`;
